# pdf2md

./: .gitignore  PROJECT_PLAN.md  README.md  main.py  pyproject.toml  requirements.txt
scripts/: dev.py
src/: __init__.py  converter.py  image_extractor.py  layout_analyzer.py  markdown_generator.py  pdf_analyzer.py  text_processor.py
tests/: __init__.py  test_converter.py
tests/samples/: README.md
